[package]
name = "mousy"
version = "0.1.0"
edition = "2021"
author= "Bjoern Holste"
about = "Moves the mouse to random coordinates for a given time"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
mouse-rs = "0.4.2"
rand = "0.8.5"
